# fin-es

./: .gitignore  README.md  docker-compose.yml  pyproject.toml
app/: main.py
app/api/: dependencies.py
app/api/routers/: events.py
app/core/: config.py
app/enums/: event_status.py
app/models/: __init__.py  company.py  event.py  event_company.py
app/repositories/: company_repository.py  event_repository.py
app/routers/: health.py
app/schemas/: company.py  event.py
migrations/: env.py
migrations/versions/: 66027853ad1d_create_events_and_event_company_table.py  7ffbd460c1f0_create_companies_table.py
